Add meta tags to index.html

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="description" content="Need help with your sleeping patterns? Our web app has got you covered! Keep track of your sleep duration and timings with ease. You can easily add, edit, or remove any sleep entry to monitor your progress."/>
+    <meta name="author" content="SandeepUrankar, Prasad-Mutnale, VaishnaviTorgal">
     <link rel="icon" type="image/jpg+xml" href="/icon.jpeg" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
